# Solitaire

./: .gitignore  CMakeLists.txt  README.md
Extra/: Felhasználói Dokumentáció.docx  Nagyházi specifikáció.docx  Programozói Dokumentáció.docx  Solitaire.py
include/: cards.h  colors.h  gamestate.h  input.h  keybinds.h  layout.h  leaderboard.h  logging.h  rendering.h  utils.h
src/: Solitaire.c  cards.c  gamestate.c  input.c  leaderboard.c  logging.c  rendering.c
